--- a/app/views/concepts/portal/services-v3.html
+++ b/app/views/concepts/portal/services-v3.html
@@ -24,7 +24,7 @@
           </a>
           <ul class="quick-links">
             <li><a href="information" class="info">View more information</a> </li>
-            <li><a href="information">Manage users and access</a> </li>
+            <li><a href="admin" class="admin">Manage users and access</a> </li>
           </ul>
         </span>
       </li>
@@ -41,7 +41,7 @@
       <li>
         <span class="service-tab">
           <a class="service-k2s" href="#">
-            <h2>MTC</h2>
+            <h2>Multiplication tables check</h2>
           </a>
           <ul class="quick-links">
             <li><a href="information" class="info">View more information</a> </li>
@@ -128,9 +128,6 @@
   left:50%;
   right: 50%;
   margin: -200px 0 0 -330px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  border-radius: 5px;
   padding: 30px;
 }
 
@@ -154,6 +151,7 @@ ul.services > li {
 
 ul.services > li span.service-tab {
   background: #F8F8F8;
+  background: #f5f5f5;
   display: block;
 }
 
@@ -178,6 +176,8 @@ ul.quick-links {
 }
 
 ul.quick-links li {
+
+  border-top:1px solid #bfc1c3;
   border-top:1px solid #fff;
 }
 
@@ -185,9 +185,17 @@ ul.quick-links li a {
   display: block;
   color: #0b0c0c;
   padding: 6px 12px 5px;
-  border-left: 5px solid #005ea5;
-  background: #eee;
+  border-left: 5px solid #2B8CC4;
   text-decoration: none;
+  background: #f7f7f7;
+}
+
+ul.quick-links li a.admin {
+  border-left-color: #28A197;
+}
+
+ul.services > li a:hover {
+  background: #eee;
 }
 
 ul.service-list li a:visited {
