--- a/app/views/concepts/portal/services-v3.html
+++ b/app/views/concepts/portal/services-v3.html
@@ -146,12 +146,14 @@ ul.services > li {
   padding: 3px 10px 7px 10px;
   box-sizing: border-box;
   position: relative;
-  min-height:125px;
+  min-height:135px;
 }
 
 ul.services > li span.service-tab {
   background: #F8F8F8;
   background: #f5f5f5;
+  background: #fff;
+  border: 1px solid #ddd;
   display: block;
 }
 
@@ -159,6 +161,7 @@ ul.services > li span.service-tab > a {
   padding: 10px 12px;
   display: block;
   border-left: 5px solid #005ea5;
+  background: #f5f5f5;
 }
 
 ul.services > li span.service-tab > a:visited {
