Added some styles for <dl>s

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -108,19 +108,36 @@
           <p>The passwords you entered did not match</p>
         </div>
 
-<div class="spinner">
-  <div class="spinner-circle1 spinner-child"></div>
-  <div class="spinner-circle2 spinner-child"></div>
-  <div class="spinner-circle3 spinner-child"></div>
-  <div class="spinner-circle4 spinner-child"></div>
-  <div class="spinner-circle5 spinner-child"></div>
-  <div class="spinner-circle6 spinner-child"></div>
-  <div class="spinner-circle7 spinner-child"></div>
-  <div class="spinner-circle8 spinner-child"></div>
-  <div class="spinner-circle9 spinner-child"></div>
-  <div class="spinner-circle10 spinner-child"></div>
-  <div class="spinner-circle11 spinner-child"></div>
-  <div class="spinner-circle12 spinner-child"></div>
-</div>
+        <h2 class="heading-medium">Loader</h2>
+
+        <div class="spinner">
+          <div class="spinner-circle1 spinner-child"></div>
+          <div class="spinner-circle2 spinner-child"></div>
+          <div class="spinner-circle3 spinner-child"></div>
+          <div class="spinner-circle4 spinner-child"></div>
+          <div class="spinner-circle5 spinner-child"></div>
+          <div class="spinner-circle6 spinner-child"></div>
+          <div class="spinner-circle7 spinner-child"></div>
+          <div class="spinner-circle8 spinner-child"></div>
+          <div class="spinner-circle9 spinner-child"></div>
+          <div class="spinner-circle10 spinner-child"></div>
+          <div class="spinner-circle11 spinner-child"></div>
+          <div class="spinner-circle12 spinner-child"></div>
+        </div>
+
+        <h2 class="heading-medium">Lists</h2>
+
+        <h3 class="heading-small">Definition lists</h3>
+
+        <dl class="rows">
+          <dt>Name</dt>
+          <dd>James King</dd>
+          <dt>Organisation</dt>
+          <dd>Department for Education</dd>
+          <dt>Address</dt>
+          <dd>53-55 Butts Road, Earlsdon, Coventry, CV1 3HB</dd>
+        </dl>
+
+
 
 {% endblock %}
