--- a/app/views/journeys/migration/step1.html
+++ b/app/views/journeys/migration/step1.html
@@ -12,8 +12,8 @@
     <ul class="list-bullet">
       <li>Your current Secure Access sign-in details</li>
     </ul>
-    <div class="panel">
-      <p>Please note: This service in only available to users who have been invited via email.</p>
+    <div class="panel panel-border-wide">
+      <p>This service in only available to users who have been invited via email.</p>
     </div>
     <a href="step2" class="button button-get-started">Start now</a>
   </div>
