--- a/app/views/journeys/migration/step2.html
+++ b/app/views/journeys/migration/step2.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<a href="step1" class="link-back">Back</a>
 <div class="grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
