--- a/app/views/journeys/migration/step3.html
+++ b/app/views/journeys/migration/step3.html
@@ -1,6 +1,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
+<a href="step2" class="link-back">Back</a>
 <div class="grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
@@ -22,8 +23,9 @@
       <dd>07777 123456</dd>
     </dl>
 
-    <div class="panel">
-      <p>Please note: If you need to edit any of these details, you can do so once you are signed-in at the end of this process</p>
+
+    <div class="panel panel-border-wide">
+      <p>If you need to edit any of these details, you can do so once you are signed-in at the end of this process</p>
     </div>
 
     <p>
