--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -109,3 +109,14 @@ div.show-password {
   }
 }
 
+
+// Start now buttons
+.button-start,
+.button-get-started {
+  @include bold-24;
+  background-image: url("../images/icon-pointer.png");
+  @include device-pixel-ratio {
+    background-image: url("../images/icon-pointer-2x.png");
+    background-size: 30px 19px;
+  }
+}
