Notifications style updates

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,6 +14,11 @@
               Front-end toolkit and prototypes
             </p>
 
+            <h2 class="heading-medium">Examples</h2>
+            <ul class="list-bullet">
+              <li><a href="/styles">Components</a> </li>
+            </ul>
+
             <h2 class="heading-medium">Journeys</h2>
             <ul class="list-bullet">
               <li><a href="/journeys/migration/step1">Whitelisted migration journey</a> </li>
