--- a/app/views/styles.html
+++ b/app/views/styles.html
@@ -17,11 +17,13 @@
             <div class="notification notification-success" tabindex="0">
               <h2>Success</h2>
               <p>Your password has been reset</p>
+              <span class="icon">x</span>
             </div>
 
             <div class="notification notification-error" tabindex="0">
               <h2>Error saving your account</h2>
               <p>The passwords you entered did not match</p>
+              <span class="icon">x</span>
             </div>
 
 
