--- a/src/sass/_notifications.scss
+++ b/src/sass/_notifications.scss
@@ -6,6 +6,7 @@ $warning: $orange;
   margin: 15px 0;
   padding: 15px;
   border:3px solid $border-colour;
+  position: relative;
   @include media(tablet) {
     border-width: 5px;
   }
@@ -19,12 +20,43 @@ $warning: $orange;
   &:focus {
     outline: 3px solid $focus-colour;
   }
+  .icon {
+    position: absolute;
+    height:30px;
+    width: 30px;
+    top: 15px;
+    right:15px;
+    overflow: hidden;
+    opacity: .5;
+    text-indent: -9999px;
+    cursor: pointer;
+    &:before, &:after {
+      position: absolute;
+      left: 15px;
+      content: ' ';
+      height: 33px;
+      width: 2px;
+      background-color: #333;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
+    }
+    &:hover {
+      opacity:1;
+    }
+  }
 }
 
 .notification-success {
   border-color: $success;
-  background: $turquoise;
+  background: $success;
   color: #fff;
+  .icon:before, .icon:after {
+    background: #fff;
+  }
 }
 
 .notification-warning {
