--- a/app/views/styles.html
+++ b/app/views/styles.html
@@ -26,6 +26,11 @@
               <span class="icon">x</span>
             </div>
 
+            <h2 class="heading-medium">Tooltips</h2>
+
+            <p class="toggle-help">
+              This is another tooltip
+            </p>
 
           </div>
         </div>
