--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,28 +5,24 @@
 
 {% block content %}
 
-        <div class="grid-row">
-          <div class="column-two-thirds">
-            <h1 class="heading-xlarge">
-              Department for Education
-            </h1>
-            <p class="lede">
-              Front-end toolkit and prototypes
-            </p>
-
-            <h2 class="heading-medium">Examples</h2>
-            <ul class="list-bullet">
-              <li><a href="/styles">Components</a> </li>
-            </ul>
-
-            <h2 class="heading-medium">Journeys</h2>
-            <ul class="list-bullet">
-              <li><a href="/journeys/migration/step1">Whitelisted migration journey</a> </li>
-            </ul>
-
-          </div>
-        </div>
-
-
+<div class="grid-row">
+  <div class="column-two-thirds">
+    <h1 class="heading-xlarge">
+      Department for Education
+    </h1>
+    <p class="lede">
+      Front-end toolkit and prototypes
+    </p>
+    <h2 class="heading-medium">Examples</h2>
+    <ul class="list-bullet">
+      <li><a href="/styles">Components</a> </li>
+    </ul>
+    <h2 class="heading-medium">Journeys</h2>
+    <ul class="list-bullet">
+      <li><a href="/journeys/invite/step1">Invite user journey</a> </li>
+      <li><a href="/journeys/migration/step1">Whitelisted migration journey</a> </li>
+    </ul>
+  </div>
+</div>
 
 {% endblock %}
