--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -16,6 +16,15 @@ dl.rows {
       text-align: right;
     }
   }
+  &.la {
+    dt {
+      text-align: left;
+      padding: 3px 0;
+    }
+    dd {
+      padding: 3px 0;
+    }
+  }
   dd {
     margin-bottom: 5px;
     @include media(tablet) {
@@ -23,7 +32,6 @@ dl.rows {
     }
   }
 }
-
 
 .spacer-heading {
   margin-top: 30px;
@@ -33,4 +41,11 @@ dl.rows {
   &.no-border {
     border:none;
   }
+}
+
+blockquote {
+  background: $grey-4;
+  padding: 15px;
+  border-left:5px solid $grey-3;
+  margin: 15px 0;
 }
