More invite user journey

--- a/app/views/journeys/invite/step1.html
+++ b/app/views/journeys/invite/step1.html
@@ -17,8 +17,10 @@
         <label class="form-label" for="email">User's email address</label>
         <input class="form-control" type="email" name="email" id="email" required="required" data-label="Email address">
       </div>
-      <input type="submit" class="button" class="button" value="Continue">
-      <a href="/" class="button button-secondary">Cancel</a>
+      <div class="submit-buttons">
+        <input type="submit" class="button" value="Continue">
+        <a href="/" class="button button-secondary">Cancel</a>
+      </div>
     </form>
   </div>
 </div>
