--- a/app/views/journeys/invite/step2-2.html
+++ b/app/views/journeys/invite/step2-2.html
@@ -1,27 +1,30 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<a href="step1" class="link-back">Back</a>
+<a href="step5" class="link-back">Back</a>
 <div class="grid-row">
   <div class="col-8">
     <h1 class="heading-xlarge">
-      Add user's details
+      Edit user's details
     </h1>
-    <p class="lede">Provide further details for the new user.</p>
   </div>
 </div>
 <div class="grid-row">
   <div class="col-12">
-    <form method="get" action="step3">
+    <form method="get" action="step5">
       <fieldset>
         <legend class="heading-medium">User's personal details</legend>
         <div class="form-group">
           <label class="form-label" for="firstname">First name</label>
-          <input class="form-control" type="text" name="firstname" id="firstname" required="required">
+          <input class="form-control" type="text" name="firstname" id="firstname" required="required" value="Catherine">
         </div>
         <div class="form-group">
           <label class="form-label" for="lastname">Last name</label>
-          <input class="form-control" type="text" name="lastname" id="lastname" required="required">
+          <input class="form-control" type="text" name="lastname" id="lastname" required="required" value="Mills">
+        </div>
+        <div class="form-group">
+          <label class="form-label" for="email">Email address</label>
+          <input class="form-control" type="email" name="email" id="email" value="catherine.mills@bourneabbey.herts.sch.uk" readonly disabled>
         </div>
         <div class="form-group">
           <label class="form-label" for="jobtitle">Job title (optional)</label>
@@ -29,8 +32,8 @@
         </div>
       </fieldset>
       <div class="submit-buttons">
-        <input type="submit" class="button" value="Continue">
-        <a href="/" class="button button-secondary">Cancel</a>
+        <input type="submit" class="button" value="Save">
+        <a href="step5" class="button button-secondary">Cancel</a>
       </div>
     </form>
   </div>
