--- a/app/views/journeys/invite/step3.html
+++ b/app/views/journeys/invite/step3.html
@@ -13,8 +13,10 @@
 <div class="grid-row">
   <div class="col-12">
     <form method="get" action="step4">
-      <input type="submit" class="button" class="button" value="Continue">
-      <a href="/" class="button button-secondary">Cancel</a>
+      <div class="submit-buttons">
+        <input type="submit" class="button" value="Continue">
+        <a href="/" class="button button-secondary">Cancel</a>
+      </div>
     </form>
   </div>
 </div>
