--- a/app/views/journeys/invite/step4.html
+++ b/app/views/journeys/invite/step4.html
@@ -13,15 +13,14 @@
 <div class="grid-row">
   <div class="col-12">
     <form method="get" action="step5">
-
-        <div class="form-group">
-          <label class="form-label" for="message">Message to the user</label>
-          <textarea class="form-control form-control-3-4" rows="5" name="message" id="message">You have been given access to our DfE services. Follow the instructions below to start using them.</textarea>
-        </div>
-
-
-      <input type="submit" class="button" class="button" value="Review">
-      <a href="/" class="button button-secondary">Cancel</a>
+      <div class="form-group">
+        <label class="form-label" for="message">Message to the user</label>
+        <textarea class="form-control form-control-3-4" rows="8" name="message" id="message">You have been given access to our DfE services. Follow the instructions below to start using them.</textarea>
+      </div>
+      <div class="submit-buttons">
+        <input type="submit" class="button" value="Review">
+        <a href="/" class="button button-secondary">Cancel</a>
+      </div>
 
     </form>
   </div>
