Update to invite journey

--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -110,7 +110,12 @@
 
 <script src="/static/javascript/vendors/jquery.js"></script>
 <script src="/static/javascript/app.min.js"></script>
+<script>
 
+  var showHideContent = new GOVUK.ShowHideContent();
+  showHideContent.init();
+
+</script>
 {% block js %}
 
 {% endblock %}
