--- a/app/views/journeys/invite/step3.html
+++ b/app/views/journeys/invite/step3.html
@@ -12,7 +12,33 @@
 </div>
 <div class="grid-row">
   <div class="col-12">
+
+
+
     <form method="get" action="step4">
+
+      <div class="form-group select-service-list">
+
+        <div class="multiple-choice" data-target="service1-permissions">
+          <input id="service1" name="service1" type="checkbox" value="service1">
+          <label for="service1">Academisation and free schools self service</label>
+          <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
+        </div>
+        <div class="panel panel-border-narrow js-hidden" id="service1-permissions">
+          <div class="multiple-choice">
+            <input id="radio-1" type="radio" name="radio-group" value="user">
+            <label for="radio-1">User</label>
+            <p class="toggle-help">A user is a user</p>
+          </div>
+          <div class="multiple-choice">
+            <input id="radio-2" type="radio" name="radio-group" value="approver">
+            <label for="radio-2">Approver</label>
+            <p class="toggle-help">An approver approves things</p>
+          </div>
+        </div>
+
+      </div>
+
       <div class="submit-buttons">
         <input type="submit" class="button" value="Continue">
         <a href="/" class="button button-secondary">Cancel</a>
