Styles for selecting service screen

--- a/app/views/journeys/invite/step3.html
+++ b/app/views/journeys/invite/step3.html
@@ -11,33 +11,56 @@
   </div>
 </div>
 <div class="grid-row">
-  <div class="col-12">
+  <div class="col-8">
 
 
 
-    <form method="get" action="step4">
+    <form method="get" action="step4" class="select-service-list">
 
-      <div class="form-group select-service-list">
-
+      <!-- Service -->
+      <div class="form-group">
         <div class="multiple-choice" data-target="service1-permissions">
           <input id="service1" name="service1" type="checkbox" value="service1">
-          <label for="service1">Academisation and free schools self service</label>
+          <label for="service1">Key to Success</label>
+          <p class="service-description">This section of the site provides secure access to confidential pupil data and to pupil premium and summer school tools.</p>
+        </div>
+        <div class="panel panel-border-narrow panel-permissions js-hidden" id="service1-permissions">
+          <fieldset>
+            <legend class="vh">Select the permission level for Key to Success</legend>
+              <div class="multiple-choice">
+                <input id="service1-r1" type="radio" name="service1-radio-group" value="user">
+                <label for="service1-r1">User <span class="toggle-help">A user is a user</span></label>
+              </div>
+              <div class="multiple-choice">
+                <input id="service1-r2" type="radio" name="service1-radio-group" value="approver">
+                <label for="service1-r2">Approver <span class="toggle-help">An approver approves things</span></label>
+              </div>
+          </fieldset>
+        </div>
+      </div>
+
+      <!-- Service -->
+      <div class="form-group">
+        <div class="multiple-choice" data-target="service2-permissions">
+          <input id="service2" name="service2" type="checkbox" value="service2">
+          <label for="service2">Multiplication tables check</label>
           <p class="service-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra justo commodo.</p>
         </div>
-        <div class="panel panel-border-narrow js-hidden" id="service1-permissions">
-          <div class="multiple-choice">
-            <input id="radio-1" type="radio" name="radio-group" value="user">
-            <label for="radio-1">User</label>
-            <p class="toggle-help">A user is a user</p>
-          </div>
-          <div class="multiple-choice">
-            <input id="radio-2" type="radio" name="radio-group" value="approver">
-            <label for="radio-2">Approver</label>
-            <p class="toggle-help">An approver approves things</p>
-          </div>
+        <div class="panel panel-border-narrow panel-permissions js-hidden" id="service2-permissions">
+          <fieldset>
+            <legend class="vh">Select the permission level for Multiplication tables check</legend>
+              <div class="multiple-choice">
+                <input id="service2-r1" type="radio" name="service2-radio-group" value="user">
+                <label for="service2-r1">User <span class="toggle-help">A user is a user</span></label>
+              </div>
+              <div class="multiple-choice">
+                <input id="service2-r2" type="radio" name="service2-radio-group" value="approver">
+                <label for="service2-r2">Approver <span class="toggle-help">An approver approves things</span></label>
+              </div>
+          </fieldset>
         </div>
-
       </div>
+
 
       <div class="submit-buttons">
         <input type="submit" class="button" value="Continue">
