--- a/src/sass/pages/_services.scss
+++ b/src/sass/pages/_services.scss
@@ -5,5 +5,18 @@
     font-size: .9em;
     padding: 0 30px 0 12px;
     margin:0;
+    position: relative;
+    top:-10px;
+  }
+  .panel-permissions {
+    position: relative;
+    top:-15px;
+  }
+  & > .form-group {
+    margin-bottom: 15px;
+    & > .multiple-choice {
+      margin-bottom: 5px;
+    }
   }
 }
+
