--- a/src/sass/pages/_services.scss
+++ b/src/sass/pages/_services.scss
@@ -20,3 +20,39 @@
   }
 }
 
+
+
+
+.service-list {
+  li {
+    margin-bottom: 10px;
+    border-left: 5px solid $grey-1;
+    &.status-live {
+      border-left-color: $turquoise;
+    }
+    a {
+      display: block;
+      background: $grey-4;
+      padding:15px;
+      text-decoration: none;
+      h3 {
+        color: $link-colour;
+        font-weight: bold;
+        span.service-title {
+          text-decoration: underline;
+        }
+        span.role-name {
+          text-decoration: none;
+          color:$grey-1;
+          font-weight:normal;
+          font-size: 90%;
+        }
+      }
+      &:hover {
+        span.service-title {
+          color: $link-hover-colour;
+        }
+      }
+    }
+  }
+}
