--- a/src/sass/pages/_services.scss
+++ b/src/sass/pages/_services.scss
@@ -20,39 +20,69 @@
   }
 }
 
-
-
-
 .service-list {
+
   li {
+
     margin-bottom: 10px;
-    border-left: 5px solid $grey-1;
+    border-left: 5px solid $grey-2;
+    background: $grey-4;
+
     &.status-live {
       border-left-color: $turquoise;
     }
-    a {
-      display: block;
-      background: $grey-4;
-      padding:15px;
-      text-decoration: none;
-      h3 {
-        color: $link-colour;
-        font-weight: bold;
-        span.service-title {
-          text-decoration: underline;
-        }
-        span.role-name {
-          text-decoration: none;
-          color:$grey-1;
-          font-weight:normal;
-          font-size: 90%;
-        }
+
+    .service-name {
+      padding: 10px;
+      @include media(tablet) {
+        padding: 10px 15px 5px;
       }
-      &:hover {
-        span.service-title {
-          color: $link-hover-colour;
+      @extend %contain-floats;
+      h3 {
+        font-weight: bold;
+        @include media(tablet) {
+          float: left;
         }
       }
     }
+
+    .heading-secondary {
+      color:$grey-1;
+      font-size: 90%;
+      font-weight: normal;
+      padding-left: 5px;
+    }
+
+    .service-link {
+      display: block;
+      text-decoration: underline;
+      &:visited {
+        color: $link-colour;
+      }
+    }
+
+    .role-name {
+      color:$grey-1;
+      font-size: 90%;
+      @include media(tablet) {
+        float: right;
+        padding-left: 15px;
+      }
+    }
+    .more-information {
+      padding: 10px;
+      @include media(tablet) {
+        padding: 7px 15px 10px;
+      }
+      font-size: 80%;
+      border-top: 1px solid #fff;
+      a {
+
+      }
+    }
   }
+}
+
+.js-enabled .service-list .modal {
+  display: none;
 }
