--- a/src/sass/pages/_services.scss
+++ b/src/sass/pages/_services.scss
@@ -104,6 +104,34 @@
     left: 50%;
     margin-left: -300px;
   }
+  .close {
+    position: absolute;
+    height:30px;
+    width: 30px;
+    top: 15px;
+    right:15px;
+    overflow: hidden;
+    opacity: .5;
+    text-indent: -9999px;
+    cursor: pointer;
+    &:before, &:after {
+      position: absolute;
+      left: 15px;
+      content: ' ';
+      height: 33px;
+      width: 2px;
+      background-color: #333;
+    }
+    &:before {
+      transform: rotate(45deg);
+    }
+    &:after {
+      transform: rotate(-45deg);
+    }
+    &:hover {
+      opacity:1;
+    }
+  }
 }
 
 .modal-bg {
