--- a/src/sass/_typography.scss
+++ b/src/sass/_typography.scss
@@ -49,3 +49,12 @@ blockquote {
   border-left:5px solid $grey-3;
   margin: 15px 0;
 }
+
+.breakable {
+  max-width: 300px;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
+}
