--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -6,9 +6,18 @@ footer#footer {
       li {
         @include media(tablet) {
           display: inline-block;
-          margin-right: 15px;  
+          margin-right: 15px;
         }
       }
     }
   }
+}
+
+#footer .footer-meta .copyright a {
+  background-image: url('../images/govuk-crest-2x.png');
+  background-size: 125px 102px;
+}
+
+#footer .footer-meta .footer-meta-inner .open-government-licence .logo a {
+  background-image: url('images/open-government-licence.png');
 }
