Fixed image path

--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -19,5 +19,5 @@ footer#footer {
 }
 
 #footer .footer-meta .footer-meta-inner .open-government-licence .logo a {
-  background-image: url('images/open-government-licence.png');
+  background-image: url('../images/open-government-licence.png');
 }
