--- a/app/views/journeys/migration/step2.html
+++ b/app/views/journeys/migration/step2.html
@@ -11,15 +11,18 @@
   </div>
 </div>
 <div class="grid-row">
-  <div class="col-12">
+  <div class="col-6 pull-right">
+    <img src="/static/images/secure-access.gif" alt="Secure access screenshot" class="responsive" />
+  </div>
+  <div class="col-6">
     <form method="get" action="step3">
       <div class="form-group">
         <label class="form-label" for="username">Secure access username</label>
-        <input class="form-control" type="text" name="username" id="username" required="required">
+        <input class="form-control full-width" type="text" name="username" id="username" required="required">
       </div>
       <div class="form-group">
         <label class="form-label" for="password">Secure access password</label>
-        <div class="show-password">
+        <div class="show-password full-width">
           <input class="form-control" id="password" name="password" type="password" required="required">
         </div>
       </div>
