Added default bold styles

--- a/src/sass/_forms.scss
+++ b/src/sass/_forms.scss
@@ -37,6 +37,9 @@ fieldset.highlight {
   &.form-group-error .error-message {
     display: block;
   }
+  .help-text {
+
+  }
 }
 
 .error-message {
